# ChangeLog for net-misc/tinc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/ChangeLog,v 1.30 2012/02/02 20:29:33 blueness Exp $

*tinc-1.0.16-r4 (02 Feb 2012)

  02 Feb 2012; Anthony G. Basile <blueness@gentoo.org> -tinc-1.0.16-r3.ebuild,
  +tinc-1.0.16-r4.ebuild, files/tincd.1, files/tincd.lo.1:
  Fix bug #401873

*tinc-1.0.16-r3 (31 Jan 2012)

  31 Jan 2012; Anthony G. Basile <blueness@gentoo.org> -tinc-1.0.16-r1.ebuild,
  -tinc-1.0.16-r2.ebuild, +tinc-1.0.16-r3.ebuild, files/tincd.1,
  files/tincd.lo.1:
  Fix bug #401423 and removed older ~arch

  15 Jan 2012; Torsten Veller <tove@gentoo.org> tinc-1.0.16-r1.ebuild,
  tinc-1.0.16-r2.ebuild:
  Fix cvs keyword in the header (#398773)

*tinc-1.0.16-r2 (21 Dec 2011)

  21 Dec 2011; Anthony G. Basile <blueness@gentoo.org> +tinc-1.0.16-r2.ebuild,
  +files/fix-compile-vde-uml.patch, +files/fix-missing-vde.patch, metadata.xml:
  Added USE flags for raw, uml and vde sockets, bug #371131

  04 Dec 2011; Sven Wegener <swegener@gentoo.org> files/tincd, files/tincd.1,
  files/tincd.lo, files/tincd.lo.1:
  reload is extra_started_commands

*tinc-1.0.16-r1 (26 Sep 2011)

  26 Sep 2011; Anthony G. Basile <blueness@gentoo.org> +tinc-1.0.16-r1.ebuild,
  +files/tincd.1, +files/tincd.conf.1, +files/tincd.lo.1:
  Rewrite of initd system, added syslog/logfile support, bug #371357

*tinc-1.0.16 (23 Sep 2011)

  23 Sep 2011; Anthony G. Basile <blueness@gentoo.org> +tinc-1.0.16.ebuild:
  Version bump to latest upstream stable

  23 Sep 2011; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
  Added myself as maintainer.

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> -tinc-1.0.8.ebuild,
  -tinc-1.0.9.ebuild, -tinc-1.0.11.ebuild, metadata.xml:
  Drop maintainer due retirement, bug #34534; remove old.

  17 Sep 2010; Robin H. Johnson <robbat2@gentoo.org> tinc-1.0.8.ebuild,
  tinc-1.0.9.ebuild, tinc-1.0.11.ebuild, tinc-1.0.13.ebuild: