@@ -9,18 +9,20 @@ AUX tincd.1 1783 RMD160 827d2367b78ac717b9d68d877bd045e3bc372ccf SHA1 d3ebf5a403
 AUX tincd.conf 19 RMD160 907e8fbeeeeda7fd5c0916ebea6bf90d14539723 SHA1 e41eb0392c8265a9f55bf8c4069f7b25085ced14 SHA256 cdbdbf4c8ca3dc805c645a404df7cc7d10908ef4e5b59f1c1d056ca6301f34cb
 AUX tincd.conf.1 157 RMD160 72e67087f4f88a4958a54eb8cf8270cdfebe4339 SHA1 82dda948f1982c9289d6732f20b7e0da33ca2f6a SHA256 eef883d3cf4ba8376f6b37518f39df103b0d999c5faa2a82653926ce50255060
 AUX tincd.lo 1189 RMD160 93abc6f48e7fbd439f8563e5d8678541ae1cb571 SHA1 9c5085e892ac20d56f878c58acf6f615c865261f SHA256 e433f2707219c0f4e56f12a411152933f1a15f14f8d5a3232caf91b15dc3468d
-AUX tincd.lo.1 1387 RMD160 aab253f15bcb28eb615cdbdb51621453cafd3152 SHA1 9a560078ca004a4d5f9af9e9eda124aa7e9e2ed0 SHA256 fbf179cb4e4383d8f7a0c44574cd5c324e71a4bc83d699aeb7e2c1e3fad2ea69
+AUX tincd.lo.1 1387 RMD160 663374de1d40861601570b187995063bfce3b19d SHA1 4cafa66cc55c36b718b569da15ab79e9fb4aa7a6 SHA256 6f820391dff70f1bb765ab885efb35dc21968789a2208fd679fe984406a02342
 DIST tinc-1.0.13.tar.gz 508903 RMD160 72e3063887546fb82e5c740a71b52840bd04237d SHA1 d84070502d693cf46c93d324cdf1686d67617db4 SHA256 6d86518161e91d0d4f8f2697ea959c90e92a409e833cdce5c92d6f0c0cb01091
 DIST tinc-1.0.16.tar.gz 519460 RMD160 a4d44bd90d4c19f4cc8bc27c1f92a8fb437698d3 SHA1 6700e63c548228b1675f243f0075f98511f1e3a8 SHA256 f20863cb1155ba4e4dd4cf16c35a5d706cd326eb8fe62b8b0a31fd57241a5400
+DIST tinc-1.0.17.tar.gz 541057 RMD160 bc00951499d832a907fc252fef4f7381046b2deb SHA1 3e07c53978868766bf805397efe5842e686464d8 SHA256 016e3162b6a79730526b8eb464d89d2c5e1139b4f2923e7c87e96662ebcc4745
 EBUILD tinc-1.0.13.ebuild 1049 RMD160 5d7498f943b260e89662ef2aca40d93d9dc5b4cb SHA1 99586c0c96f382a8d7e3b488136ee1ed6f18a216 SHA256 f78730591f2e34e7b82ad476fe09df387881f72e0a32193d40a562c138cdbdb6
-EBUILD tinc-1.0.16-r4.ebuild 1915 RMD160 58ce82cc1d9d67b52e6789dfbf5aaebf35c6c45e SHA1 bb78812be0fbb2ff0eb131318e32ab865e9ca265 SHA256 dce2d3ef6cbc583b15c6ac1518dd46e21d44936133e2fb6cc9b57957f16d6153
+EBUILD tinc-1.0.16-r4.ebuild 1911 RMD160 c95042935b31f2efdb9eaa3cdf12a0687ca678e0 SHA1 4343cb7406c309581fb7e5ca4270703820c11403 SHA256 0777921b42dfb2202fbb1725311b88f910234be25c45440b8e04d18b18aa27f6
 EBUILD tinc-1.0.16.ebuild 1070 RMD160 c62b38596f6ad8fc0affb80fa7f0bdfe09775d6b SHA1 09a6d6b8af92be06eeb8e9a361022509f4495256 SHA256 6934f068171dcc6ca6105168e5dbfc9d6e1a9f9515c744a52d3ca80c58ce96d9
-MISC ChangeLog 5158 RMD160 cfa5e1cd5741a6098c2601e0ce6b6db3950b4801 SHA1 bb62c606f866db71d5b4817025dd41d365038254 SHA256 1cba3fad6bbcf0ad78e423f384aa1c5be2fbdac4336f72dc2e7c7bb3110762b4
+EBUILD tinc-1.0.17.ebuild 1272 RMD160 59dba5ca338b0cfe7bc415a09578227dc5950827 SHA1 4ca73aace2b4c6ade3282e34290756249ee2a7c4 SHA256 d6b8ca9bab09ce250f47d8eb61be9d5f5b30c0d90bd4ce10737d5d7d0a1068e8
+MISC ChangeLog 5345 RMD160 fc679a7ecfa38648e723745b8f74c0bdcc8938f7 SHA1 99a150196ef789101c8957902b2b3703b9ab1620 SHA256 ac4424f732264d78b353aa0d8b603c3602fa993d63ff581062db4c695f73925f
 MISC metadata.xml 552 RMD160 5c5409d1828ecc369ae2de83f0c37561650ac554 SHA1 5269ecc96eb0fd5ecc66b26570f34ceb90d490df SHA256 7ce6544bd535e945c4c3da2c159fc5c1f4a3cc9f36fd14375fa301b592506fc8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk8q8jYACgkQl5yvQNBFVTWBSwCdHsYGBSpwTjPGbL298Le3Pe7Y
-EYsAoJJq99PVMmoEM5DpX3AWVDSeqvog
-=wNmK
+iEYEAREIAAYFAk9cseMACgkQl5yvQNBFVTWMCwCeP3XRnxKA+kII/k22Su3ssZPO
+OMAAn1Mqfmhm0w2qdimh7uueERPDTg/j
+=6P5R
 -----END PGP SIGNATURE-----
