@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/tinc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/ChangeLog,v 1.30 2012/02/02 20:29:33 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/ChangeLog,v 1.31 2012/03/11 14:08:26 blueness Exp $
+
+*tinc-1.0.17 (11 Mar 2012)
+
+  11 Mar 2012; Anthony G. Basile <blueness@gentoo.org> tinc-1.0.16-r4.ebuild,
+  +tinc-1.0.17.ebuild, files/tincd.lo.1:
+  Version bump, some cosmetic cleanups
 
 *tinc-1.0.16-r4 (02 Feb 2012)
 
